# ros_astra_camera

./: .clang-format  .gitattributes  .gitignore  .make_deb.sh  56-orbbec-usb.rules  CHANGELOG.rst  CMakeLists.txt  COPYRIGHT.txt  README  README.MD  README.md  astra_nodelets.xml  indigo-turtlebot.sh  install.sh  orbbec-usb.rules  package.xml
NiViewer/: NiViewer  OpenNI.ini  PS1080Console  SimpleRead
astra_camera/: CMakeLists.txt  package.xml
astra_camera/include/astra_camera/: constants.h  device_listener.h  dynamic_params.h  ob_camera_node.h  ob_camera_node_factory.h  ob_context.h  ob_frame_listener.h  ob_timer_filter.h  ros_param_backend.h  types.h  utils.h  uvc_camera_driver.h
astra_camera/include/astra_camera/point_cloud_proc/: depth_traits.h  point_cloud_xyz.h  point_cloud_xyzrgb.h
astra_camera/include/openni2/: OniVersion.h
astra_camera/launch/: astra_mini.launch.py  dabai_dcw.launch.py  dabai_dw.launch.py  dabai_pro.launch.py  dabai_u3.launch.py  launch_utils.py  multi_astra_mini.launch.py  multi_dabai.launch.py  multi_dabai_dcw.launch.py  multi_dabai_dw.launch.py  multi_dabai_pro.launch.py
astra_camera/openni2_redist/arm64/: SimpleRead
astra_camera/openni2_redist/x64/: NiViewer  PS1080Console  SimpleRead
astra_camera/params/: astra_mini_params.yaml  camera_params_template.yaml  configurable_params.yaml  dabai_dcw_params.yaml  dabai_params.yaml  dabai_pro_params.yaml
astra_camera/rviz/: multi_camera.rviz  pointcloud.rviz
astra_camera/scripts/: 56-orbbec-usb.rules  depth_to_color.py  format_output_camera_params.py  format_output_supported_video_modes.py  install.sh
astra_camera/specs/: astra_mini.md  control_cmd.md  dabai_dcw.MD  dabai_dw.MD
astra_camera/src/: clean_up_shm_node.cpp  device_listener.cpp  dynamic_params.cpp  list_devices_node.cpp  ob_camera_info.cpp  ob_camera_node.cpp  ob_camera_node_factory.cpp  ob_context.cpp  ob_frame_listener.cpp  ob_timer_filter.cpp  ros_param_backend.cpp  ros_service.cpp  utils.cpp  uvc_camera_driver.cpp
astra_camera/src/point_cloud_proc/: point_cloud_xyz.cpp  point_cloud_xyzrgb.cpp
astra_camera_msgs/: CMakeLists.txt  package.xml
astra_camera_msgs/srv/: GetCameraInfo.srv  GetCameraParams.srv  GetDeviceInfo.srv  GetInt32.srv
cfg/: Astra.cfg  Astra.cfg-dabai  UVCCamera.cfg  orbbec_astra_s_depth_camera_info.yaml  orbbec_astra_s_rgb_camera_info.yaml
debian/: postinst  udev
fwupgrade/: astra_fwupload_1_09_4  astra_s_fwupload_1_09_3
include/astra_camera/: astra_convert.h  astra_device.h  astra_device_info.h  astra_device_manager.h  astra_device_type.h  astra_driver.h  astra_exception.h  astra_frame_listener.h  astra_timer_filter.h  astra_version.h  astra_video_mode.h  constants.h  d2c_filter.h  d2c_viewer.h  device_listener.h  ob_camera_node.h  ob_camera_node_factory.h  ob_context.h  ob_frame_listener.h  ob_timer_filter.h  ros12_shim.h  types.h  utils.h  uvc_camera_driver.h
include/astra_camera/point_cloud_proc/: depth_conversions.h  depth_traits.h  point_cloud_proc.h  point_cloud_xyz.h  point_cloud_xyzrgb.h
include/libuvc_camera/: camera_driver.h
include/openni2/: OniCAPI.h  OniCProperties.h  OniCTypes.h  OniPlatform.h  OniProperties.h  OniVersion.h  OpenNI.h  PS1080.h
include/openni2_redist/arm/: PS1080Console  SimpleRead
include/openni2_redist/arm/OpenNI2/Drivers/: orbbec.ini
include/openni2_redist/arm64/: NiViewer  PS1080Console  SimpleRead
include/openni2_redist/arm64/OpenNI2/Drivers/: orbbec.ini
include/openni2_redist/x64/: NiViewer  OpenNI.ini  PS1080Console  SimpleRead
include/openni2_redist/x64/OpenNI2/Drivers/: orbbec.ini  orbbec.ini~
include/openni2_redist/x86/OpenNI2/Drivers/: Orbbec.ini  orbbec.ini
launch/: Halley.launch  astra.launch  astra_plus.launch  astra_pro.launch  astra_pro_plus.launch  astraplus.launch  astrapro.launch  astraproplus.launch  astraprosm.launch  cleanup.launch  dabai.launch  dabaiPro.launch  dabai_dc1.launch  dabai_dcw.launch  dabai_dcw2.launch  dabai_dw.launch  dabai_dw2.launch  dabai_max.launch  dabai_max_pro.launch  dabai_pro.launch  dabai_u3.launch  dcw_astra.launch  deeyea.launch  embedded_s.launch  embedded_u3.launch  gemini.launch  gemini_e.launch  gemini_e_lite.launch  gemini_uw.launch  list_devices.launch  multi_Halley.launch  multi_astra.launch  multi_dabai.launch  multi_dabai_dcw.launch  multi_dabai_dcw2.launch  multi_dabai_max.launch  multi_dabai_pro.launch  multi_dabaipro.launch  multi_deeyea.launch  multi_device.launch  (+7 more)
launch/includes/: astra_frames.launch  device.launch.xml
msg/: DeviceInfo.msg
orbbec_rgb/: Astra_Embedded_S.launch  Astra_Stereo_S.launch  canglong2.launch  deeyea.launch
params/: 320x240_640x480.yaml  640x400_640x480.yaml  astra_params.yaml  camera_params_template.yaml  dabai_dcw_params.yaml
ros/: astra_camera_node.cpp  astra_camera_nodelet.cpp
scripts/: depth_to_color.py  get_point_cloud_dist.py  get_supported_video_modes.py  sync.py  test_open_close_stream.py
src/: astra_cleanup.cpp  astra_convert.cpp  astra_device.cpp  astra_device_info.cpp  astra_device_manager.cpp  astra_device_type.cpp  astra_driver.cpp  astra_exception.cpp  astra_frame_listener.cpp  astra_timer_filter.cpp  astra_video_mode.cpp  d2c_filter.cpp  d2c_viewer.cpp  device_listener.cpp  list_devices.cpp  list_devices_node.cpp  main.cpp  ob_camera_info.cpp  ob_camera_node.cpp  ob_camera_node_factory.cpp  ob_context.cpp  ob_frame_listener.cpp  ob_timer_filter.cpp  ros_service.cpp  usb_reset.c  utils.cpp  uvc_camera_driver.cpp
src/libuvc_camera/: camera_driver.cpp  main.cpp  nodelet.cpp
src/point_cloud_proc/: point_cloud_xyz.cpp  point_cloud_xyzrgb.cpp
srv/: GetCameraInfo.srv  GetCameraParams.srv  GetDeviceInfo.srv  GetDouble.srv  GetUVCMirror.srv
test/: test_wrapper.cpp
