<?xml version="1.0"?>
<package format="2">
  <name>astra_camera</name>
  <version>0.2.0</version>
  <description>Drivers for Orbbec Astra Devices. </description>
  <author email="liuhua@orbbec.com">Tim Liu</author>
  <license>BSD</license>

  <maintainer email="liuhua@orbbec.com">Tim Liu</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
