<?xml version="1.0"?>
<package format="2">
  <name>astra_camera</name>
  <version>1.2.3</version>
  <description>Drivers for Orbbec Astra Devices. </description>
  <license>Apache License 2.0</license>
  <maintainer email="mocun@orbbec.com">Mo Cun</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>git</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>libudev-dev</depend>
  <depend>libusb-1.0-dev</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>rgbd_launch</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>message_filters</depend>
  <depend>camera_info_manager</depend>
</package>
