<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>astra_camera</name>
  <version>1.0.3</version>
  <description>TODO: Package description</description>
  <maintainer email="jian.dong@pobox.com">Joe Dong</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>ament_lint_auto</depend>
  <depend>ament_lint_common</depend>
  <depend>astra_camera_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>class_loader</depend>
  <depend>message_filters</depend>
  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>image_publisher</depend>
  <depend>image_transport</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>magic_enum</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
